<resources>
    <string name="app_name">ChatApp</string>
    <string name="name">Name</string>
    <string name="sign_out">Sign Out</string>
    <string name="user_name">User Name</string>
    <string name="chatapp">ChatApp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">sign up</string>
    <string name="Message">Message</string>
    <string name="repeat_password">Repeat password</string>
    <string name="send">Send</string>
</resources>